Проектная работа 3. Версия 2

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
     <div class="page">
         
-        <header class="header header_position">
+        <header class="header page__header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <div class="header__links">
-              <a class="header__lang-link header__lang-link_text-decoration" href="">RU</a>
+              <a class="header__lang-link header__lang-link_active-lang" href="">Ru</a>
               <a class="header__lang-link" href="">En</a>
             </div>
         </header>
 
         <main class="content">
 
-            <section class="lead lead_position">
+            <section class="lead content__lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img class="lead__image" src="./images/lead-polka.jpg" alt="Поезд">
-                <p class="lead__caption">ВАША ПОЛКА &mdash; ВЕРХНЯЯ</p>
+                <p class="lead__caption">Ваша полка &mdash; верхняя</p>
             </section>
 
-            <section class="intro intro_position">
+            <section class="intro content__intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск 
                     в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, 
@@ -35,15 +35,15 @@
                     троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые 
                     интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li class="intro__list-item">Чосовых поясов <span class="intro__list-item_span">11</span></li>
-                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-item_span">12</span></li>
-                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-item_span">16</span></li>
-                    <li class="intro__list-item">Природных заповедников <span class="intro__list-item_span">105</span></li>
-                    <li class="intro__list-item">Аэропортов <span class="intro__list-item_span">241</span></li>
+                    <li class="intro__list-item">Часовых поясов <span class="intro__span">11</span></li>
+                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__span">12</span></li>
+                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__span">16</span></li>
+                    <li class="intro__list-item">Природных заповедников <span class="intro__span">105</span></li>
+                    <li class="intro__list-item">Аэропортов <span class="intro__span">241</span></li>
                 </ul>
             </section>
 
-            <section class="photo-grid photo-grid_position">
+            <section class="photo-grid content__photo-grid">
                 <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
                 <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака">
                 <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
@@ -58,12 +58,12 @@
                 <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
             </section>
 
-            <section class="places places_position">
-                <div class="place place_position">
+            <section class="places content__places">
+                <div class="place places__place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="http://park-kosa.ru">park-kosa.tu</a>
+                        <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                     <div class="place__paragraphs">
@@ -75,7 +75,7 @@
                         городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                     </div>
                 </div>
-                <div class="place place_position">
+                <div class="place places__place">
                     <h2 class="place__title">Кольский</h2>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
                     <div class="place__website">
@@ -92,7 +92,7 @@
                         в Мурманск.</p>
                     </div>
                 </div>
-                <div class="place place_position">
+                <div class="place places__place">
                     <h2 class="place__title">Алтай</h2>
                     <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                     <div class="place__website">
@@ -108,7 +108,7 @@
                         И знаменитые манулы — тоже обитатели Алтайского края.</p>
                     </div>
                 </div>
-                <div class="place place_position">
+                <div class="place places__place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div class="place__website">
@@ -123,7 +123,7 @@
                         скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
                 </div>
-                <div class="place place_position">
+                <div class="place places__place">
                     <h2 class="place__title">Карелия</h2>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
                     <div class="place__website">
@@ -138,7 +138,7 @@
                 </div>
             </section>
 
-            <section class="cover cover_position">
+            <section class="cover content__cover">
               <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
                   <h2 class="cover__title">До Байкала «на собаках»</h2>
                   <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
@@ -147,7 +147,7 @@
 
         </main>
 
-        <footer class="footer footer_position">
+        <footer class="footer page__footer">
             <ul class="footer__links">
                 <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
                 <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
