--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+                        <a class="place__link" href="http://park-kosa.ru " target="_blank">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                     <div class="place__paragraphs">
@@ -80,7 +80,7 @@
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                     </div>
                     <div class="place__paragraphs">
                       <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -97,7 +97,7 @@
                     <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+                        <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                     </div>
                     <div class="place__paragraphs">
                       <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -113,7 +113,7 @@
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                        <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <div class="place__paragraphs">
                       <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
@@ -128,7 +128,7 @@
                     <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                        <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
                         западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых 
@@ -139,7 +139,7 @@
             </section>
 
             <section class="cover content__cover">
-              <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+              <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                   <h2 class="cover__title">До Байкала «на собаках»</h2>
                   <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
               </a>
